--- a/src/style/input.css
+++ b/src/style/input.css
@@ -30,3 +30,31 @@ body {
 #dark-toggle:checked ~ label div.toggle-circle {
   @apply translate-x-3;
 }
+
+.hero {
+  background-image: url("../../assets/images/bg-hero.jpg");
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  height: 600px;
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.wisher img {
+  border-radius: 50%;
+  width: 200px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
