bg-hero path fixed

--- a/src/style/input.css
+++ b/src/style/input.css
@@ -32,7 +32,7 @@ body {
 }
 
 .hero {
-  background-image: url("../../assets/images/bg-hero.jpg");
+  background-image: url("../assets/images/bg-hero.jpg");
   background-position: center;
   background-size: cover;
   position: relative;
